Fix #32
add shit

fix #32

remove deepMatches

increase coverage

increase coverage

fix whitespaces

remove another whitespace

yet another whitespace